--- a/.github/workflows/lint-project.yaml
+++ b/.github/workflows/lint-project.yaml
@@ -6,10 +6,10 @@ on:
   pull_request:
     branches: [main, master]
 
-name: lint
+name: lint-project
 
 jobs:
-  lint:
+  lint-project:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -20,13 +20,12 @@ jobs:
         with:
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::lintr, local::.
-          needs: lint
+      - name: Install lintr
+        run: install.packages("lintr")
+        shell: Rscript {0}
 
-      - name: Lint
-        run: lintr::lint_package()
+      - name: Lint root directory
+        run: lintr::lint_dir()
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
